--- a/frontend/src/styles/LandingPage.module.scss
+++ b/frontend/src/styles/LandingPage.module.scss
@@ -1,20 +1,38 @@
 @import 'colors';
 
+.container {
+    // display: grid;
+    // grid-template-rows: [row0-start] 180% [row1-start] 60% [row2-start] auto [end];
+
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
 .header {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 144px;
     text-shadow: 10px 0 0 #aaaaaa;
-    position: absolute;
-    top: 40%;
+
+    //position: absolute;
+    position: relative;
+    //width: 100%;
+    //max-height: 30vh;
+    // top: 40%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
+    //transform: translate(-50%, -50%);
+    white-space: nowrap;
+
+    //grid-row-start: row1-start;
+    //grid-row-end: row2-start;
 }
 
 .blobright {
     position: absolute;
     top: 0;
     right: 0;
-
 }
 
 .blobleft {
